<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2"
    android:layout_margin="8dp">


    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/active" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginStart="45dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textSize="14sp"
                    android:textColor="@color/textBlack"
                    android:fontFamily="@font/tajawalbold"/>
                <ImageView
                    android:id="@+id/activeArrowId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow_yellow"
                    android:layout_gravity="center"
                    android:paddingStart="4dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/activeTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:fontFamily="@font/tajawalbold"
                android:layout_marginStart="45dp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/serious"
            android:scaleType="centerCrop"
            android:layout_gravity="center" >
        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginStart="45dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serious"
                    android:textSize="14sp"
                    android:textColor="@color/textBlack"
                    android:fontFamily="@font/tajawalbold"/>
                <ImageView
                    android:id="@+id/seriousArrowId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow_red"
                    android:layout_gravity="center"
                    android:paddingStart="4dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/seriousTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textSize="18sp"
                android:textColor="@color/primeRed"
                android:fontFamily="@font/tajawalbold"
                android:layout_marginStart="45dp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>